@@ -92,7 +92,7 @@ namespace __debug
 
 #ifdef __GXX_EXPERIMENTAL_CXX0X__
       deque(deque&& __x)
-      : _Base(__x), _Safe_base()
+      : _Base(std::forward<deque>(__x)), _Safe_base()
       { this->_M_swap(__x); }
 #endif
 
