@@ -121,7 +121,7 @@ namespace __debug
 
 #ifdef __GXX_EXPERIMENTAL_CXX0X__
       list(list&& __x)
-      : _Base(__x), _Safe_base()
+      : _Base(std::forward<list>(__x)), _Safe_base()
       { this->_M_swap(__x); }
 #endif
 
