@@ -97,7 +97,7 @@ namespace __debug
 
 #ifdef __GXX_EXPERIMENTAL_CXX0X__
       multimap(multimap&& __x)
-      : _Base(__x), _Safe_base()
+      : _Base(std::forward<multimap>(__x)), _Safe_base()
       { this->_M_swap(__x); }
 #endif
 
